<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/purple_700"
    >

    <TextView
        android:id="@+id/facbook_txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/facebook_txv"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/email_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/facbook_txv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:hint="@string/email_hint"
        />
    <EditText
        android:id="@+id/pass_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/email_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:hint="@string/password_hint"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        android:text="@string/buttonLogin_text"
        app:layout_constraintTop_toBottomOf="@id/pass_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/purple_200"
        android:layout_marginTop="20dp"
    />

    <TextView
        android:id="@+id/register_txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        android:text="@string/register"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"

        />

</androidx.constraintlayout.widget.ConstraintLayout>